updating desired usage

--- a/example/example.html
+++ b/example/example.html
@@ -10,6 +10,13 @@
 
 	<script src='../build/datamodel.js'></script>
 	<script>
+	//option1:store a reference to the model (get/set)
+	// datamodel('name')
+	// .setTemplate('')
+	
+	//option 2: create a new model without storing
+	//datamodel().setTemplate(...)
+
 		// console.log(datamodel);
 	</script>
 </body>
